--- a/BioKids_Swift/Base.lproj/Main.storyboard
+++ b/BioKids_Swift/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="LFg-tE-UTF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="LFg-tE-UTF">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -32,7 +32,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qqC-M9-oAT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="975" y="1039"/>
+            <point key="canvasLocation" x="975" y="2464"/>
+        </scene>
+        <!--Observations-->
+        <scene sceneID="SFr-CL-Uar">
+            <objects>
+                <viewController id="Uik-Fo-JgS" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6oI-21-ybC"/>
+                        <viewControllerLayoutGuide type="bottom" id="4aK-hL-1z5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2bI-Da-I1U">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Observations" id="9dj-uy-2PL"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nl8-YD-NK3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="975" y="1119"/>
         </scene>
         <!--About-->
         <scene sceneID="fgi-3m-pKq">
@@ -1160,17 +1179,39 @@ Version 2.0.0</string>
                         <segue destination="B6Z-4q-kfY" kind="relationship" relationship="viewControllers" id="OOc-KG-Bak"/>
                         <segue destination="VWQ-xS-7ns" kind="relationship" relationship="viewControllers" id="ZoD-5T-XgB"/>
                         <segue destination="F2k-Qh-3R8" kind="relationship" relationship="viewControllers" id="9uS-Lo-LFO"/>
+                        <segue destination="Uik-Fo-JgS" kind="relationship" relationship="viewControllers" id="HbM-Vv-SRy"/>
+                        <segue destination="um7-Bf-bVT" kind="relationship" relationship="viewControllers" id="0Yh-aU-aVr"/>
+                        <segue destination="JxM-XQ-BcT" kind="relationship" relationship="viewControllers" id="K3g-zz-am4"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jJu-ya-O7t" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-248" y="403"/>
         </scene>
-        <!--Home-->
+        <!--Item-->
+        <scene sceneID="IDg-fr-SX8">
+            <objects>
+                <viewController id="JxM-XQ-BcT" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mo2-v1-fFn"/>
+                        <viewControllerLayoutGuide type="bottom" id="r7V-CI-FsK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="rcP-wp-Aju">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="oV5-WF-3IV"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0c0-hX-xIu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="975" y="-1054"/>
+        </scene>
+        <!--Add Observation-->
         <scene sceneID="4T1-IN-JbF">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="B6Z-4q-kfY" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Home" image="web-page-home" selectedImage="web-page-home" id="5WG-IU-S0c">
+                    <tabBarItem key="tabBarItem" title="Add Observation" image="web-page-home" selectedImage="web-page-home" id="5WG-IU-S0c">
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
                                 <color key="value" red="0.1903577447" green="0.29684269429999999" blue="0.61899781229999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1179,7 +1220,7 @@ Version 2.0.0</string>
                     </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ITb-zk-Hus">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="1024" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -1190,6 +1231,25 @@ Version 2.0.0</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ggg-hD-a3i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="975" y="-330"/>
+        </scene>
+        <!--Group Profile-->
+        <scene sceneID="aQZ-V1-gk4">
+            <objects>
+                <viewController id="um7-Bf-bVT" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="njA-Pl-sTE"/>
+                        <viewControllerLayoutGuide type="bottom" id="zdy-ol-ZTN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="StA-2X-fdb">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Group Profile" id="cDp-7I-MGe"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="O3O-bG-vAJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="975" y="402"/>
         </scene>
         <!--What Animal Type?-->
         <scene sceneID="Eyg-Un-USu">
@@ -1254,7 +1314,7 @@ Version 2.0.0</string>
                                 <rect key="frame" x="0.0" y="28" width="1024" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Xu7-YH-kZr" id="Lyx-s1-LgG">
-                                    <rect key="frame" x="0.0" y="0.0" width="1024" height="99.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="1024" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RgL-vo-TPc">
@@ -1296,8 +1356,8 @@ Version 2.0.0</string>
         <image name="web-page-home" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Tgc-Wb-knC"/>
-        <segue reference="bEn-qf-OZG"/>
         <segue reference="WcK-TP-jwf"/>
+        <segue reference="bEn-qf-OZG"/>
+        <segue reference="Tgc-Wb-knC"/>
     </inferredMetricsTieBreakers>
 </document>
