--- a/BioKids_Swift/Base.lproj/Main.storyboard
+++ b/BioKids_Swift/Base.lproj/Main.storyboard
@@ -216,7 +216,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VxO-NV-w5K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="664" y="230"/>
+            <point key="canvasLocation" x="788.0859375" y="229.6875"/>
         </scene>
         <!--Settings-->
         <scene sceneID="6ca-CI-doK">
@@ -235,7 +235,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OKg-q3-Pe2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-36" y="230"/>
+            <point key="canvasLocation" x="87.890625" y="229.6875"/>
         </scene>
         <!--What Do You See?-->
         <scene sceneID="AJB-B6-gwu">
@@ -250,7 +250,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XVJ-CW-63B">
-                                <rect key="frame" x="241" y="572" width="542" height="68"/>
+                                <rect key="frame" x="241" y="572" width="542" height="71"/>
                                 <color key="backgroundColor" red="0.1903577447" green="0.29684269429999999" blue="0.61899781229999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="48"/>
                                 <state key="normal" title="Take Photo">
@@ -261,7 +261,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Ro-Xb-pG6">
-                                <rect key="frame" x="412.5" y="648" width="200" height="68"/>
+                                <rect key="frame" x="412.5" y="651" width="200" height="71"/>
                                 <color key="backgroundColor" red="0.1903577447" green="0.29684269429999999" blue="0.61899781229999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="YrD-jj-5A6"/>
@@ -590,7 +590,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qR6-WB-SVU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4770" y="98"/>
+            <point key="canvasLocation" x="4893.75" y="97.65625"/>
         </scene>
         <!--What Kind of Plant?-->
         <scene sceneID="kQA-9M-hfz">
@@ -1032,7 +1032,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LsN-7b-VMW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7781.25" y="-330.46875"/>
+            <point key="canvasLocation" x="7905.4687499999991" y="-330.46875"/>
         </scene>
         <!--Notes View Controller-->
         <scene sceneID="WxX-rK-T7f">
@@ -1065,7 +1065,7 @@
                                 </state>
                                 <connections>
                                     <action selector="didPressDoneBtn:" destination="jlU-D9-aS2" eventType="touchUpInside" id="p0z-GS-aYA"/>
-                                    <segue destination="XRP-z2-MZl" kind="show" id="teB-t6-sCo"/>
+                                    <segue destination="Sy5-ek-LlT" kind="show" id="teB-t6-sCo"/>
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter text here." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="UDx-ZK-GNe">
@@ -1103,7 +1103,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mh1-CV-a5e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8603.90625" y="-330.46875"/>
+            <point key="canvasLocation" x="8728.125" y="-330.46875"/>
         </scene>
         <!--Login View-->
         <scene sceneID="S2H-MN-9iM">
@@ -1140,15 +1140,15 @@
             </objects>
             <point key="canvasLocation" x="-1424" y="230"/>
         </scene>
-        <!--Observations-->
+        <!--Observation View Controller-->
         <scene sceneID="myg-8k-Lxj">
             <objects>
-                <viewController id="XRP-z2-MZl" customClass="ViewController" customModule="BioKids_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="XRP-z2-MZl" customClass="ObservationViewController" customModule="BioKids_Swift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="gUA-7y-BcH"/>
                         <viewControllerLayoutGuide type="bottom" id="txF-bw-vpz"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Jqe-dP-pg5" customClass="Vie">
+                    <view key="view" contentMode="scaleToFill" id="Jqe-dP-pg5">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -1173,7 +1173,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1VH-Tc-r7i">
-                                                    <rect key="frame" x="8" y="8" width="658" height="35"/>
+                                                    <rect key="frame" x="8" y="8" width="658" height="34.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="658" id="E0t-9Q-K6M"/>
                                                     </constraints>
@@ -1189,6 +1189,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="observationLabel" destination="1VH-Tc-r7i" id="Zua-tm-3q9"/>
+                                            <segue destination="6A1-xd-zND" kind="show" id="yDh-wR-ela"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -1259,7 +1260,7 @@
                             <constraint firstItem="w9C-G7-2ap" firstAttribute="leading" secondItem="xfd-fs-9I1" secondAttribute="leading" id="oaA-X3-3JS"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Observations" id="l5S-g9-UbW"/>
+                    <navigationItem key="navigationItem" id="fw8-iL-fBt"/>
                     <connections>
                         <outlet property="groupNameLbl" destination="nxJ-J0-du7" id="DLc-sH-NIQ"/>
                         <outlet property="observationTable" destination="xfd-fs-9I1" id="Wef-bA-Sm3"/>
@@ -1269,7 +1270,82 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wIt-dF-knS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-729" y="230"/>
+            <point key="canvasLocation" x="-697" y="1003"/>
+        </scene>
+        <!--Single Observation View Controller-->
+        <scene sceneID="SeV-Zr-i9a">
+            <objects>
+                <viewController id="6A1-xd-zND" customClass="SingleObservationViewController" customModule="BioKids_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xt6-fg-xcZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="oE5-lk-Q6Q"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Lib-7h-pvc">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Observation" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="li0-br-C3c">
+                                <rect key="frame" x="367" y="84" width="290.5" height="59"/>
+                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="48"/>
+                                <color key="textColor" red="0.01176470588" green="0.1019607843" blue="0.41960784309999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AHI-Qi-Jmq">
+                                <rect key="frame" x="62" y="168" width="550" height="425"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="425" id="bl7-PR-ddy"/>
+                                    <constraint firstAttribute="width" constant="550" id="jWX-XV-sfO"/>
+                                    <constraint firstAttribute="height" constant="425" id="x6b-TC-bIT"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="92H-Bs-hKU">
+                                <rect key="frame" x="641" y="168" width="322" height="425"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="425" id="fFu-hG-YXL"/>
+                                    <constraint firstAttribute="width" constant="322" id="uaf-MQ-oJU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Af-10-jTc">
+                                <rect key="frame" x="452" y="618" width="120" height="71"/>
+                                <color key="backgroundColor" red="0.01176470588" green="0.1019607843" blue="0.41960784309999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="3sX-et-PBf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="48"/>
+                                <state key="normal" title="Edit">
+                                    <color key="titleColor" red="0.96044379469999996" green="0.73467916249999998" blue="0.19775494930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="uMs-Dj-Cme" kind="show" id="y1s-ii-DjA"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="li0-br-C3c" firstAttribute="centerX" secondItem="Lib-7h-pvc" secondAttribute="centerX" id="2Q9-ed-Fx2"/>
+                            <constraint firstItem="92H-Bs-hKU" firstAttribute="leading" secondItem="AHI-Qi-Jmq" secondAttribute="trailing" constant="29" id="AZf-kd-FQb"/>
+                            <constraint firstItem="AHI-Qi-Jmq" firstAttribute="top" secondItem="li0-br-C3c" secondAttribute="bottom" constant="25" id="AkK-UK-zHJ"/>
+                            <constraint firstItem="AHI-Qi-Jmq" firstAttribute="leading" secondItem="Lib-7h-pvc" secondAttribute="leadingMargin" constant="42" id="JFb-ve-F44"/>
+                            <constraint firstItem="li0-br-C3c" firstAttribute="top" secondItem="xt6-fg-xcZ" secondAttribute="bottom" constant="20" id="QvO-YW-AIM"/>
+                            <constraint firstItem="92H-Bs-hKU" firstAttribute="top" secondItem="li0-br-C3c" secondAttribute="bottom" constant="25" id="WLh-eF-j2P"/>
+                            <constraint firstItem="92H-Bs-hKU" firstAttribute="leading" secondItem="AHI-Qi-Jmq" secondAttribute="trailing" constant="29" id="aKp-hg-0d2"/>
+                            <constraint firstItem="9Af-10-jTc" firstAttribute="centerX" secondItem="Lib-7h-pvc" secondAttribute="centerX" id="eMO-Fm-4c4"/>
+                            <constraint firstItem="9Af-10-jTc" firstAttribute="top" secondItem="AHI-Qi-Jmq" secondAttribute="bottom" constant="25" id="mWc-0x-6OS"/>
+                            <constraint firstItem="92H-Bs-hKU" firstAttribute="top" secondItem="li0-br-C3c" secondAttribute="bottom" constant="25" id="sgF-mm-thc"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="editBtn" destination="9Af-10-jTc" id="7Lp-ok-VVB"/>
+                        <outlet property="observationImgView" destination="AHI-Qi-Jmq" id="F8m-eK-sSb"/>
+                        <outlet property="observationLbl" destination="92H-Bs-hKU" id="Sbr-Al-umZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NmK-YJ-Pl5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-697.265625" y="1766.40625"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="oXv-JH-MZY">
@@ -1282,7 +1358,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="wqR-ch-TFw" kind="relationship" relationship="viewControllers" id="eh6-qL-OSX"/>
-                        <segue destination="XRP-z2-MZl" kind="relationship" relationship="viewControllers" id="zfc-Lu-SYF"/>
+                        <segue destination="Sy5-ek-LlT" kind="relationship" relationship="viewControllers" id="zfc-Lu-SYF"/>
                         <segue destination="B6Z-4q-kfY" kind="relationship" relationship="viewControllers" id="OOc-KG-Bak"/>
                         <segue destination="nSO-Xp-irl" kind="relationship" relationship="viewControllers" id="qgv-YE-m76"/>
                         <segue destination="F2k-Qh-3R8" kind="relationship" relationship="viewControllers" id="9uS-Lo-LFO"/>
@@ -1389,7 +1465,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5bz-3k-uEz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5663" y="98"/>
+            <point key="canvasLocation" x="5786.71875" y="97.65625"/>
         </scene>
         <!--What Animal Type?-->
         <scene sceneID="4Kv-eg-UPf">
@@ -1436,16 +1512,36 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fdk-kn-37x" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6521" y="98"/>
+            <point key="canvasLocation" x="6645.1171875" y="97.65625"/>
+        </scene>
+        <!--Observations-->
+        <scene sceneID="yFa-gW-u3Z">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Sy5-ek-LlT" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Observations" id="l5S-g9-UbW"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Q7X-6M-MoH">
+                        <rect key="frame" x="0.0" y="20" width="1024" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="XRP-z2-MZl" kind="relationship" relationship="rootViewController" id="i0f-hd-QZY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ryP-KU-ifj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-697" y="230"/>
         </scene>
     </scenes>
     <resources>
         <image name="PhotoImageBackground" width="570" height="646"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="teB-t6-sCo"/>
+        <segue reference="zfc-Lu-SYF"/>
         <segue reference="WcK-TP-jwf"/>
-        <segue reference="bEn-qf-OZG"/>
+        <segue reference="9tD-3x-LN3"/>
         <segue reference="Tgc-Wb-knC"/>
+        <segue reference="y1s-ii-DjA"/>
     </inferredMetricsTieBreakers>
 </document>
